fix(image): Change background image size to prevent cropped

--- a/src/pages/Signup/_signup-page.scss
+++ b/src/pages/Signup/_signup-page.scss
@@ -34,7 +34,7 @@
     margin-bottom: 64px;
 
     background-image: url('../../assets/images/logo-light.png');
-    @include backgroundImgStyles(cover);
+    @include backgroundImgStyles(contain);
   }
 
   &__form {
